# bevy-inspector-egui

./: Cargo.toml
crates/bevy-inspector-egui/: Cargo.toml
crates/bevy-inspector-egui-derive/: Cargo.toml
crates/bevy-inspector-egui/examples/integrations/: egui_dock.rs
crates/bevy-inspector-egui/examples/quick/: world_inspector.rs
crates/bevy-inspector-egui/src/: lib.rs  utils.rs
crates/bevy-inspector-egui/src/bevy_inspector/: mod.rs
crates/bevy-inspector-egui/src/reflect_inspector/: mod.rs
